[package]
name = "embedded-driver-template"
description = "A rust-embedded driver template"
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/embedded-driver-template"
authors = ["Chris Maniewski"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://git.sr.ht/~chmanie/embedded-driver-template"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"

[dev-dependencies]
embedded-hal-mock = "0.8.0"
